dynamic page for index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -22,6 +22,9 @@
 </div>
 
 <!-- Add this line after the existing canvas -->
+
+<div id="stats"></div>
+
 <canvas class="my-4 w-100" id="scatterChart" width="900" height="380"></canvas>
 
 <div class="table-responsive"></div>
