--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,6 @@
     <script src="js/navbar.js"></script>
     <script src="js/table.js"></script>
     <script src="js/dash/shoeSize.js"></script>
+    <script src="js/dash/stat.js"></script>
   </body>
 </html>
