working on insertFile

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -22,8 +22,10 @@
 </div>
 
 <!-- Add this line after the existing canvas -->
-
 <div id="stats"></div>
+
+<!-- Add this line to create a new div for the insertFile content -->
+<div id="insert-file-container"></div>
 
 <canvas class="my-4 w-100" id="scatterChart" width="900" height="380"></canvas>
 
