--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
           <div id="dashboard">
             <!-- Default page content goes here -->
           </div>
-          <div id="table">
+          <div id="table" class="d-none">
             <!-- Table page content goes here -->
           </div>
         </main>
@@ -58,5 +58,7 @@
     <script src="js/table.js"></script>
     <script src="js/dash/shoeSize.js"></script>
     <script src="js/dash/stat.js"></script>
+    <script src="js/dash/flatFoot.js"></script>
+    <script src="js/insertFile.js"></script>
   </body>
 </html>
