--- a/public/stat.html
+++ b/public/stat.html
@@ -1,20 +1,16 @@
 <!-- stat.html -->
 <div class="row align-items-md-stretch">
-  <div class="col-md-6">
-    <div class="h-100 p-5 text-bg-dark rounded-3">
-      <h2 id="total-users">Total Users: N/A</h2>
-      <p id="gender-stats">Males: N/A, Females: N/A</p>
+  <div class="col-md-6" id="total-users-stats">
+    <div class="h-100 p-5 bg-light border rounded-3">
+      <h2>Total users</h2>
+      <p class="lead"></p>
     </div>
   </div>
-  <div class="col-md-6">
+
+  <div class="col-md-6" id="flatfoot-stats">
     <div class="h-100 p-5 bg-light border rounded-3">
-      <h2>Add borders</h2>
-      <p>
-        Or, keep it light and add a border for some added definition to the
-        boundaries of your content. Be sure to look under the hood at the source
-        HTML here as we've adjusted the alignment and sizing of both column's
-        content for equal-height.
-      </p>
+      <h2>Flatfoot users</h2>
+      <p class="lead"></p>
     </div>
   </div>
 </div>
